Indonesia demo sandbox

--- a/html/includes/_nav.ejs
+++ b/html/includes/_nav.ejs
@@ -80,11 +80,11 @@
               -
             </span>
             <ul class="js-dropdown-list dropdown-list">
-              <li class="js-dropdown-item dropdown-item" data-value="brazil">Brazil</li>
+              <li class="js-dropdown-item dropdown-item" data-value="indonesia">Indonesia</li>
+              <li class="js-dropdown-item dropdown-item">Brazil</li>
               <li class="js-dropdown-item dropdown-item">Argentina</li>
               <li class="js-dropdown-item dropdown-item">Paraguay</li>
               <li class="js-dropdown-item dropdown-item">Colombia</li>
-              <li class="js-dropdown-item dropdown-item">Indonesia</li>
             </ul>
           </div>
         </div>
@@ -96,28 +96,10 @@
               -
             </span>
             <ul class="js-dropdown-list dropdown-list">
-              <li class="js-dropdown-item dropdown-item" data-value="soy">Soy</li>
+              <li class="js-dropdown-item dropdown-item" data-value="oilpalm">Palm oil</li>
+              <li class="js-dropdown-item dropdown-item">Soy</li>
               <li class="js-dropdown-item dropdown-item">Beef</li>
-              <li class="js-dropdown-item dropdown-item">Palm oil</li>
               <li class="js-dropdown-item dropdown-item">Coffee</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="nav-param">
-          <div class="c-dropdown" data-dropdown="biomeFilter">
-            <span class="dropdown-label">Biome</span>
-            <span class="js-dropdown-title dropdown-title -small">
-              -
-            </span>
-            <ul class="js-dropdown-list dropdown-list">
-              <li class="js-dropdown-item dropdown-item" data-value="none">All</li>
-              <li class="js-dropdown-item dropdown-item" data-value="Amazonia">Amazonia</li>
-              <li class="js-dropdown-item dropdown-item" data-value="Cerrado">Cerrado</li>
-              <li class="js-dropdown-item dropdown-item" data-value="Mata Atlantica">Mata Atlantica</li>
-              <li class="js-dropdown-item dropdown-item" data-value="Caatinga">Caatinga</li>
-              <li class="js-dropdown-item dropdown-item" data-value="Pampa">Pampa</li>
-              <li class="js-dropdown-item dropdown-item" data-value="Pantanal">Pantanal</li>
             </ul>
           </div>
         </div>
