--- a/styles/components/map.scss
+++ b/styles/components/map.scss
@@ -104,7 +104,7 @@
     }
 
     &.-linked {
-      fill: none;
+      fill: $white;
       stroke-opacity: 1;
       stroke-width: 1.5px;
       stroke-dasharray: 2px 3px;
