--- a/styles/components/map/map-legend.scss
+++ b/styles/components/map/map-legend.scss
@@ -1,15 +1,57 @@
 @import '../../settings';
 
 .c-map-legend {
-  height: 96px;
   padding: 0;
   background-color: $white;
   cursor: pointer;
+  box-shadow: 0 -1px 3px 0 rgba($black, .1), 0 -1px 2px 0 rgba($black, .2);
+
+  .bullets {
+    color: rgba($charcoal-grey, .5);
+    font-family: $font-family-1;
+    font-size: 11px;
+    line-height: normal;
+    letter-spacing: -1.1px;
+    text-transform: uppercase;
+    text-align: left;
+
+    li {
+      margin-right: 15px;
+      line-height: 150%;
+    }
+
+    .bullet {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      position: relative;
+      top: 1px;
+      margin-right: 2px;
+      border: solid 1px #6c787d;
+      text-align: center;
+
+      span {
+        position: absolute;
+        top: 11px;
+        left: 0;
+        right: 0;
+        margin: auto;
+        font-size: 10px;
+        line-height: normal;
+        letter-spacing: -1px;
+        white-space: nowrap;
+      }
+    }
+  }
 }
 
 .c-map-legend-choro {
+  position: relative;
 
   .bucket {
+    position: relative;
+    text-align: center;
+
     &.ch-red-0 { background-color: $ch-red-0; };
     &.ch-red-1 { background-color: $ch-red-1; };
     &.ch-red-2 { background-color: $ch-red-2; };
@@ -29,23 +71,32 @@
     &.ch-bi-0-0 { background-color: $ch-bi-0-0; };
     &.ch-bi-1-0 { background-color: $ch-bi-1-0; };
     &.ch-bi-2-0 { background-color: $ch-bi-2-0; };
+
+    span {
+      position: absolute;
+      top: 22px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      font-size: 10px;
+      line-height: normal;
+      letter-spacing: -1px;
+      white-space: nowrap;
+      color: rgba($charcoal-grey, .5);
+      font-family: $font-family-1;
+    }
   }
 
   .bucket-container {
     position: relative;
-    border-top: 1px solid rgba($charcoal-grey, .2);
+    border-bottom: 1px solid rgba($charcoal-grey, .2);
 
     .bucket-names {
       display: flex;
-      justify-content: space-between;
     }
 
     .bucket-legend {
-      position: relative;
-      display: flex;
-      flex-wrap: wrap;
-      width: 258px;
-      height: 18px;
+
       border: 1px solid #6C787D;
     }
 
@@ -64,7 +115,7 @@
     .icon-bidimensional-legend-arrows {
       display: none;
       position: absolute;
-      top: 46px;
+      top: 41px;
       left: -10px;
       right: 0;
       margin: auto;
@@ -74,14 +125,36 @@
 
     &.-horizontal,
     &.-vertical {
-      align-items: flex-end;
+      padding: 9px 0 24px 0;
+      text-align: right;
+
+      .bucket-names {
+        justify-content: flex-end;
+        padding: 0 9px;
+      }
 
       .bucket-legend {
-        position: absolute;
-        right: 16px;
+        display: inline-flex;
+        justify-content: flex-end;
+        height: 14px;
+        margin: 4px 10px 0 0;
 
-        .bucket-item {
-          flex-basis: calc(100% / 9);
+
+
+        &[data-colors="5"] {
+          width: 45.2%;
+
+          .bucket-item {
+            flex-basis: calc(100% / 5);
+          }
+        }
+
+        &[data-colors="7"] {
+          width: 65.5%;
+
+          .bucket-item {
+            flex-basis: calc(100% / 7);
+          }
         }
       }
 
@@ -91,23 +164,34 @@
     }
 
     &.-bidimensional {
-      height: 96px;
-      padding: 16px 0;
+      height: 88px;
+      padding: 11px 0;
 
       .bucket-names {
-        padding: 0 22px;
+        justify-content: space-between;
+        padding: 0 6px;
       }
 
       .bucket-legend {
         position: absolute;
-        top: 23px;
+        top: 18px;
         left: 130px;
         width: 50px;
         height: 50px;
         transform: rotateZ(-45deg);
+        display: flex;
+        flex-wrap: wrap;
 
         > .bucket-item {
           flex-basis: calc(100% / 3);
+        }
+      }
+
+      .layer-name {
+        max-width: 37%;
+
+        &:last-child {
+          text-align: right;
         }
       }
 
@@ -116,47 +200,98 @@
       }
     }
   }
+
+  .bullets {
+    position: absolute;
+    left: 6px;
+    bottom: 6px;
+
+    li {
+      line-height: 100%;
+    }
+  }
+
+  .bucket-values {
+    position: absolute;
+    top: 41px;
+    left: -10px;
+    right: 0;
+    margin: auto;
+    width: 103px;
+    height: 40px;
+
+    li {
+      position: absolute;
+      font-family: $font-family-1;
+      font-size: 10px;
+      line-height: normal;
+      letter-spacing: -1px;
+      color: rgba($charcoal-grey, 0.5);
+
+      &:nth-child(1) {
+        bottom: 22px;
+        right: 97px;
+      }
+
+      &:nth-child(2) {
+        bottom: 11px;
+        right: 86px;
+      }
+
+      &:nth-child(3) {
+        bottom: -1px;
+        right: 75px;
+      }
+
+      &:nth-child(4) {
+        bottom: -1px;
+        left: 75px;
+      }
+
+      &:nth-child(5) {
+        bottom: 11px;
+        left: 86px;
+      }
+
+      &:nth-child(6) {
+        bottom: 22px;
+        left: 97px;
+      }
+    }
+  }
 }
 
 .c-map-legend-context {
-  color: rgba($charcoal-grey, .5);
-  font-family: $font-family-1;
-  font-size: $font-size-small;
-  letter-spacing: -.5px;
-  text-transform: uppercase;
 
   .cartodb-legend {
-    padding: 10px 0;
+    padding: 5px 6px 3px 6px;
+    border-bottom: 1px solid rgba($charcoal-grey, .2);
+
+    &.choropleth {
+      padding-bottom: 14px;
+
+      .bullet {
+        width: 20px;
+
+        &:first-child {
+          border-right: 0;
+          margin-right: 0;
+        }
+
+        &:not(:first-child):not(:last-child) {
+          border-right: 0;
+          border-left: 0;
+          margin-right: 0;
+        }
+
+        &:last-child {
+          border-left: 0;
+        }
+      }
+    }
   }
 
-  .cartodb-legend:not(:only-child):not(:last-child) {
-    border-bottom: 1px solid $pinkish-grey;
-  }
-
-  .bullet, .quartile {
+  .bullets li {
     display: inline-block;
-    width: 10px;
-    height: 10px;
-  }
-
-  .bullet {
-    margin-right: 5px;
-    border-radius: 99px;
-  }
-
-  .bullet-icon {
-    width: 15px;
-    height: 15px;
-    border-radius: 0;
-    background-size: contain;
-  }
-
-  .max, .min, .graph {
-    display: inline-block;
-    margin-right: 4px;
-  }
-
-  ul {
-    position: relative;
   }
 }
