Feature/new search box (#219)
* Layout improvements

* Node titles redesign (WIP)

* Fix the update node selector legend

* Fix the update node selector legend

* New node titles design

* Map borders

* Expanded map adjusts

* Flow veil

* Map attribution styles

* Map attribution styles

* Map legend WIP

* Veil fix

* Nav shadow

* Small logo + beta

* Nav button adjusts

* Dropdown titles styles

* Nav search icon

* Nav burger adjusts

* New search box styles

* Fixing a state bug with the selectedNodeIds

* New search icon

* Search box JS behaviour

* Search box JS behaviour

* Adjust results padding

* Merge branch 'develop' into feature/new-search-box

# Conflicts:
#	html/includes/_nav.ejs

--- a/html/flows.ejs
+++ b/html/flows.ejs
@@ -10,6 +10,7 @@
     <%= htmlWebpackPlugin.options.icons %>
     <div class="l-flows">
 
+      <%= htmlWebpackPlugin.options.search %>
       <%= htmlWebpackPlugin.options.nav %>
 
       <div class="veil js-veil"></div>
@@ -111,13 +112,6 @@
         </div>
 
         <div class="c-titlebar">
-          <div class="search js-search-container">
-            <div class="c-search js-search">
-              <label for="search-input">Search for:</label>
-              <input class="js-search-input" id="search-input" placeholder="producer, trader or country of import" />
-              <svg class="icon icon-search"><use xlink:href="#icon-search"></use></svg>
-            </div>
-          </div>
           <div class="c-nodes-titles js-nodes-titles"></div>
         </div>
 
