--- a/scripts/templates/flows-nav.ejs
+++ b/scripts/templates/flows-nav.ejs
@@ -1,7 +1,7 @@
 <div class="left-side">
   <div class="offset-container js-logo">
     <a class="trase-logo" href="/">
-      <img src="images/logos/logo-trase-beta.svg" alt="TRASE" />
+      <img src="images/logos/logo-trase-small-beta.svg" alt="TRASE" />
     </a>
   </div>
   <div class="nav-param">
@@ -131,5 +131,9 @@
         <li class="js-dropdown-item dropdown-item" data-value="true">Complete</li>
       </ul>
     </div>
+  </div>
+
+  <div class="nav-param js-open-search">
+    <svg class="icon icon-search"><use xlink:href="#icon-search"></use></svg>
   </div>
 </div>
