--- a/styles/components/dropdown.scss
+++ b/styles/components/dropdown.scss
@@ -28,7 +28,7 @@
     color: rgba($charcoal-grey, .6);
     font-family: $font-family-1;
     font-size: $font-size-small;
-    letter-spacing: -.2px;
+    letter-spacing: -.5px;
     text-transform: uppercase;
 
     &.-big {
@@ -47,7 +47,7 @@
     cursor: pointer;
 
     &::after {
-      @include arrow(8px, 2px, $medium-pink, 'down'); //shoudl be more bigger than now, maybe 14px and border 3px or 4px
+      @include arrow(8px, 2px, rgba($charcoal-grey, .4), 'down');
       position: absolute;
       top: 50%;
       right: 0;
@@ -63,6 +63,8 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
+      line-height: normal;
+      margin: -3px 0 -5px 0;
     }
   }
 
@@ -197,8 +199,9 @@
 
   &.-small .dropdown-title,
   &.-small .dropdown-list > .dropdown-item {
-    font-size: $font-size-medium;
+    font-size: 16px;
     font-weight: normal;
+    margin: 1px 0 0 0;
   }
 
   &.-homepage {
