--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -7,7 +7,7 @@ $layer-map-width: 376px;
 $content-max-width: 1040px;
 $anchor-list-max-width: calc(100% / 3);
 $max-width-grid: 1280px;
-$nav-padding: 16px;
+$nav-padding: 18px;
 $sankey-x-margin: 15px;
 
 $padding-wrap-mobile: 24px;
@@ -25,6 +25,7 @@ $gray: #ebebeb;
 $medium-pink: #ea6869;
 $medium-pink-faded: lighten($medium-pink, 20%);
 $manilla: #ffeb8b;
+$egg-shell: #fff0c2;
 $orange: #ffa500;
 $pale-grey: #e0e4e8;
 $pale-peach: #fff1ae;
