--- a/styles/components/shared/nav.scss
+++ b/styles/components/shared/nav.scss
@@ -7,7 +7,7 @@
   height: $nav-height;
 
   background-color: $white;
-  box-shadow: $box-shadow;
+  box-shadow: 0 1px 6px 0 rgba($black, 0.15), 0 1px 6px 0 rgba($black, 0.2);
 
   z-index: 3;
 
@@ -19,8 +19,8 @@
 
     .burger {
       position: relative;
-      width: 20px;
-      height: 15px;
+      width: 18px;
+      height: 12px;
 
       transform: rotate(0deg);
       transition: .5s ease-in-out;
@@ -35,7 +35,7 @@
         position: absolute;
         left: 0;
         width: 100%;
-        height: 3px;
+        height: 2px;
         transform: rotate(0deg);
         transition: .25s ease-in-out;
         border-radius: 3px;
@@ -49,13 +49,13 @@
         }
 
         &:nth-child(2) {
-          top: 6px;
+          top: 5px;
 
           transform-origin: left center;
         }
 
         &:last-child {
-          top: 12px;
+          top: 10px;
 
           transform-origin: left center;
         }
@@ -74,7 +74,7 @@
           background: $black;
 
           &:first-child {
-            top: -2px;
+            top: -1px;
             left: 3px;
 
             transform: rotate(45deg);
@@ -285,6 +285,12 @@
             }
           }
         }
+      }
+
+      .icon-search {
+        width: 21px;
+        height: 22px;
+        fill: $charcoal-grey;
       }
     }
 
