--- a/html/includes/_footer.ejs
+++ b/html/includes/_footer.ejs
@@ -1,16 +1,11 @@
 <footer class="c-footer">
   <div class="wrap">
     <div class="signup">
-      <!--<p class="title -mono-font -center -white">Sign up here to receive news updates about TRASE</p>-->
-      <!--<form name="sign-up-form" class="sign-up-form">-->
-        <!--<input type="email" class="email-field" placeholder="email address" required>-->
-        <!--<button type="submit" class="c-button -gray js-btn-sign-up">subscribe</button>-->
-      <!--</form>-->
-      <p class="title -mono-font -center -white">
-        <a class="sign-up-link" target="_blank"href="https://traseearth.squarespace.com/">
-          Click here to receive news updates about TRASE
-        </a>
-        </p>
+      <!--<p class="title -mono-font -center -white">-->
+        <!--<a class="sign-up-link" target="_blank"href="https://traseearth.squarespace.com/">-->
+          <!--Click here to receive news updates about TRASE-->
+        <!--</a>-->
+        <!--</p>-->
     </div>
     <div class="contain-logos-footer">
       <div class="contain-logos">
