changes dropdown to accept a hides only child option

--- a/styles/components/dropdown.scss
+++ b/styles/components/dropdown.scss
@@ -24,9 +24,10 @@
     }
   }
 
-  &.-unique-child {
+  &.-hide-only-child {
     pointer-events: none;
     cursor: default;
+
     .dropdown-title:after {
       display: none;
     }
