Add bulk downloads functionality + a bit of sanity to data portal

--- a/html/data.ejs
+++ b/html/data.ejs
@@ -13,40 +13,6 @@
             <div class="c-bulk-downloads">
               <div class="c-bulk-downloads__title">BULK DOWNLOADS</div>
               <div class="row">
-                <div class="small-4 columns">
-                  <div class="c-bulk-downloads__item">
-                    <span>Brazilian Soy (all years)</span>
-                    <svg class="icon icon-download"><use xlink:href="#icon-download"></use></svg>
-                  </div>
-                </div>
-
-                <div class="small-4 columns">
-                  <div class="c-bulk-downloads__item">
-                    <span>Paraguayan Soy (all years)</span>
-                    <svg class="icon icon-download"><use xlink:href="#icon-download"></use></svg>
-                  </div>
-                </div>
-
-                <div class="small-4 columns">
-                  <div class="c-bulk-downloads__item">
-                    <span>Argentinian Beef (all years)</span>
-                    <svg class="icon icon-download"><use xlink:href="#icon-download"></use></svg>
-                  </div>
-                </div>
-
-                <div class="small-4 columns">
-                  <div class="c-bulk-downloads__item">
-                    <span>Indonesian Palm Oil (all years)</span>
-                    <svg class="icon icon-download"><use xlink:href="#icon-download"></use></svg>
-                  </div>
-                </div>
-
-                <div class="small-4 columns">
-                  <div class="c-bulk-downloads__item">
-                    <span>Colombian Coffee (all years)</span>
-                    <svg class="icon icon-download"><use xlink:href="#icon-download"></use></svg>
-                  </div>
-                </div>
               </div>
             </div>
             <div class="c-custom-dataset">
@@ -187,11 +153,11 @@
                       <div class="c-custom-dataset-selector__header">FILE</div>
                       <ul class="c-custom-dataset-selector__values js-custom-dataset-selector-values">
                         <li class="-selected">
-                          .csv (commas)
+                          .csv (comma separated)
                           <div class="c-radio-btn -no-self-cancel -enabled -grey" data-group="file" value=".csv" data-separator-type="comma"></div>
                         </li>
                         <li>
-                          .csv (semicolon)
+                          .csv (semicolon separated)
                           <div class="c-radio-btn -no-self-cancel -grey" data-group="file" value=".csv" data-separator-type="semicolon"></div>
                         </li>
                         <li>
@@ -201,7 +167,7 @@
                       </ul>
                     </div>
 
-                    <div class="c-custom-dataset-submit-button js-custom-dataset-download-button">
+                    <div class="c-custom-dataset-submit-button js-custom-dataset-download-button -disabled">
                       <svg class="icon icon-download"><use xlink:href="#icon-download"></use></svg>
                       DOWNLOAD DATA
                     </div>
